--- a/About.HTML
+++ b/About.HTML
@@ -13,8 +13,8 @@
             <div class="logo">💻 Progdas</div>
             <ul class="nav-links">
                 <li><a href="Beranda.html">Beranda</a></li>
-                <li><a href="About.html" class="active">Tentang</a></li>
-                <li><a href="Contact.html">Kontak</a></li>
+                <li><a href="About.HTML" class="active">Tentang</a></li>
+                <li><a href="Contact.HTML">Kontak</a></li>
             </ul>
         </nav>
     </header>
@@ -49,3 +49,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
