--- a/Contact.HTML
+++ b/Contact.HTML
@@ -13,8 +13,8 @@
             <div class="logo">💻 Progdas</div>
             <ul class="nav-links">
                 <li><a href="Beranda.html">Beranda</a></li>
-                <li><a href="About.html">Tentang</a></li>
-                <li><a href="Contact.html" class="active">Kontak</a></li>
+                <li><a href="About.HTML">Tentang</a></li>
+                <li><a href="Contact.HTML" class="active">Kontak</a></li>
             </ul>
         </nav>
     </header>
@@ -38,3 +38,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
